2000-05-14  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/fvwm2.1 (Style): removed a wrong sentence stated that Style
	commands based on name override those based on class and resource.
	* NEWS: s/GroUp/GrowUp/; increased to 2.3.18
	* ChangeLog: some clean up in number of entries

2000-05-13  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/Module.h:
	added some missing prototypes

	* libs/defaults.h:
	* fvwm/fvwm.c (InitVariables):
	* fvwm/screen.h (ScreenInfo):
	* fvwm/move_resize.h (stick_function):
	* fvwm/fvwm2.1:
	* fvwm/move_resize.c (SetMoveSmoothness):
	(moveLoop):
	* fvwm/functions.h:
	* fvwm/functions.c (func_config):
	removed MoveSmoothness command

	* fvwm/move_resize.c (InteractiveMove):
	(moveLoop):
	fixed opaque icon moving

	* fvwm/add_window.c (destroy_icon_font):
	(destroy_window_font):
	does not destroy the default font anymore
	destroy old font even if no new font was specified
	core dump fixes

	* fvwm/style.c (ProcessNewStyle):
	minor bugfix

2000-05-12  Hippo

	* fvwm/builtins.c
	* fvwm/events.c
	* fvwm/fvwm2.1
	* fvwm/module_interface.c
	* fvwm/module_interface.h
	* fvwm/move_resize.c
	* libs/Module.c
	  Added queueing system for module commands.
	  Speeded up module command processing.
	  New convenience functions SendUnlockNotification() &
	  SendQuitNotification() for use by modules.
	  Removed FINISHED_STARTUP, UNLOCK & KILLME commands.

2000-05-11  Dominik Vogt  <dominik_vogt@gmx.de>

	* configure.in: changed version to 2.3.17

2000-05-10  Paul D. Smith  <psmith@gnu.org>

	* vms/vms.c (VMS_msg): Put va_start/va_end close for cleanliness.
	(VMS_ExecL): Add missing va_end call.

	* fvwm/misc.c (fvwm_msg): Wrap _each_ instance of vsprintf() in
	va_start()/va_end().

2000-05-10  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/add_window.c (AddWindow): remove some debug stuff.

2000-05-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/functions.c (ExecuteFunction):
	another parameter expansion fix

	* fvwm/misc.c (IntersectsInterval):
	new function