@@ -1,3 +1,8 @@
+2000-05-15  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/stack.c:
+	experimental 'fix' for stack ring problem.
+
 2000-05-14  Mikhael Goikhman  <migo@homemail.com>
 
 	* fvwm/fvwm2.1 (Style): removed a wrong sentence stated that Style
